--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CiaAerea": "Server=DESKTOP-3G4HHQJ;Database=DbCiaAerea;User Id=sa;Password=senha;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
